# mcp-with-oauth

./: .gitignore  README.md  pyproject.toml
cognito/: .env.example  README.md  add_resource_server.py  client.py  cognito_token_verifier.py  mcp-server-with-auth.py  setup_cognito.py
cognito-and-ac-gateway/: .env.example  README.md  add_resource_server.py  client.py  create_gateway.py  setup_cognito.py  tools.example.json
local/: .env.example  README.md  auth_server.py  client.py  mcp-server-with-auth.py  simple_auth_provider.py  token_verifier.py
