[project]
name = "mcp-with-oauth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.67",
    "cryptography>=46.0.3",
    "mcp>=1.20.0",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.0.0",
    "requests>=2.32.5",
]
